--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==4.0.10
 django-cors-headers==4.4.0
 django-filter==23.5
 django-jazzmin==2.6.2
+django-modeltranslation==0.18.11
 djangorestframework==3.15.1
 drf-spectacular==0.27.2
 idna==3.7
@@ -18,6 +19,7 @@ referencing==0.35.1
 requests==2.32.3
 rpds-py==0.19.0
 sqlparse==0.5.0
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.2
