--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ django-filter==23.5
 django-jazzmin==2.6.2
 django-modeltranslation==0.18.11
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 idna==3.7
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 pillow==10.4.0
+PyJWT==2.8.0
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
