--- a/requirements.txt
+++ b/requirements.txt
@@ -10,16 +10,19 @@ django-modeltranslation==0.18.11
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+Faker==26.0.0
 idna==3.7
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 pillow==10.4.0
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.19.0
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
