--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,28 @@
+algoliasearch==3.0.0
 asgiref==3.8.1
 attrs==23.2.0
-certifi==2024.7.4
+certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==4.0.10
 django-cors-headers==4.4.0
+django-environ==0.11.2
 django-filter==23.5
 django-jazzmin==2.6.2
-django-modeltranslation==0.18.11
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
-Faker==26.0.0
 idna==3.7
 inflection==0.5.1
-jsonschema==4.23.0
+install==1.3.5
+jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 pillow==10.4.0
 PyJWT==2.8.0
-python-dateutil==2.9.0.post0
 PyYAML==6.0.1
 referencing==0.35.1
 requests==2.32.3
-rpds-py==0.19.0
-six==1.16.0
+rpds-py==0.18.1
 sqlparse==0.5.0
-typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.2
-django-environ==0.11.2
